// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaFrame renders empty 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="styled__StyledSlide-sc-1u0ipg6-11 fKYEPQ"
      >
        <table
          class="DataTables__StyledTable-sc-1a8mcjf-0 jdGhZY"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="DataTables__StyledBodyTr-sc-1a8mcjf-1 BdycZ table-row"
            >
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="DataTables__StyledTable-sc-1a8mcjf-0 jdGhZY"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="DataTables__StyledBodyTr-sc-1a8mcjf-1 BdycZ table-row"
            >
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders empty for ONgDB >= 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="styled__StyledSlide-sc-1u0ipg6-11 fKYEPQ"
      >
        <table
          class="DataTables__StyledTable-sc-1a8mcjf-0 jdGhZY"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                Index Name
              </th>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                Type
              </th>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                Uniqueness
              </th>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                EntityType
              </th>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                LabelsOrTypes
              </th>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                Properties
              </th>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                State
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="DataTables__StyledBodyTr-sc-1a8mcjf-1 BdycZ table-row"
            >
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              >
                None
              </td>
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              />
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              />
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              />
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              />
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              />
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              />
            </tr>
          </tbody>
        </table>
        <table
          class="DataTables__StyledTable-sc-1a8mcjf-0 jdGhZY"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="DataTables__StyledBodyTr-sc-1a8mcjf-1 BdycZ table-row"
            >
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders results for ONgDB < 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="styled__StyledSlide-sc-1u0ipg6-11 fKYEPQ"
      >
        <table
          class="DataTables__StyledTable-sc-1a8mcjf-0 jdGhZY"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="DataTables__StyledBodyTr-sc-1a8mcjf-1 BdycZ table-row"
            >
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              >
                 ON :Movie(released) ONLINE 
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="DataTables__StyledTable-sc-1a8mcjf-0 jdGhZY"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="DataTables__StyledTh-sc-1a8mcjf-2 bOSvBa table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="DataTables__StyledBodyTr-sc-1a8mcjf-1 BdycZ table-row"
            >
              <td
                class="DataTables__StyledTd-sc-1a8mcjf-3 chEDmG table-properties"
              >
                 ON ( book:Book ) ASSERT book.isbn IS UNIQUE
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;
